[Change] StandardCharsets.UTF_8 を使用する